--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,66 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="proceed">PROCEED</string>
+    <string name="enter_company_name">Enter company name</string>
+    <string name="add_advert">ADD ADVERT</string>
+    <string name="top_advert_2_horizontal">TOP ADVERT#2 (HORIZONTAL)</string>
+    <string name="click_here_to_upload_image">Click here to upload image</string>
+    <string name="submit">SUBMIT</string>
+    <string name="str_user_details">USER DETAILS</string>
+    <string name="first_name_here">First name here</string>
+    <string name="last_name_here">Last name here</string>
+    <string name="location_here">Location here</string>
+    <string name="phone_number_here">Phone number here</string>
+    <string name="enter_front_desk">Enter Front Desk</string>
+    <string name="enter_section">Enter section</string>
+    <string name="enter_product_name">Enter product name</string>
+    <string name="enter_product_price">Enter product price</string>
+    <string name="enter_product_description">Enter product description</string>
+    <string name="enter_product_available_quantity">Enter product available quantity</string>
+    <string name="manage_adverts">MANAGE ADVERTS</string>
+    <string name="enter_department">Enter department</string>
+    <string name="order_management">ORDER MANAGEMENT</string>
+    <string name="in_process">in process</string>
+    <string name="completed">completed</string>
+    <string name="new_order">new</string>
+    <string name="manage">MANAGE</string>
+    <string name="orders">ORDERS</string>
+    <string name="login">LOGIN</string>
+    <string name="_26">+26</string>
+    <string name="enter_phone_number">Enter phone number</string>
+    <string name="new_user_register_here">New user? Register here</string>
+    <string name="verification">VERIFICATION</string>
+    <string name="please_enter_the_code_i_sent_you_via_sms">Please enter the code I sent you via SMS</string>
+    <string name="enter_code">Enter code</string>
+    <string name="registration_banner">REGISTRATION</string>
+    <string name="existing_user_login_here">Existing user? Login here</string>
+    <string name="product_list">PRODUCT LIST</string>
+    <string name="name">Name:</string>
+    <string name="location">Location:</string>
+    <string name="phone_number">Phone number:</string>
+    <string name="edit">EDIT</string>
+    <string name="user_details">USER DETAILS</string>
+    <string name="deliver_to_this_address">DELIVER TO THIS ADDRESS</string>
+    <string name="thank_you_your_order_has_been_received">Thank you! Your order has been received</string>
+    <string name="exit">EXIT</string>
+    <string name="continue_shopping">CONTINUE SHOPPING</string>
+    <string name="delete">delete?</string>
+    <string name="no">NO</string>
+    <string name="yes">YES</string>
+    <string name="delete_2">DELETE</string>
+    <string name="from">From:</string>
+    <string name="time">Time:</string>
+    <string name="date">Date:</string>
+    <string name="invoice_num">INVOICE #</string>
+    <string name="view_address">view address</string>
+    <string name="done">assign</string>
+    <string name="click_to_view_products">Click to view products</string>
+    <string name="click_to_view_rider">click to view rider</string>
+    <string name="login_banner">LOGIN</string>
+    <string name="verification_banner">VERIFICATION</string>
+    <string name="submit_btn">SUBMIT</string>
+    <string name="ok">ok</string>
+    <string name="please_register_before_using_this_service">Please register before using this service</string>
+    <string name="you_are_an_existing_user_please_login">You are an existing user. Please login.</string>
 </resources>
